# HF-ITCNE24-SemArbeit4-LicenseMonitor-K8s

./: .gitignore  README.md  _config.yml  catalog-info.yaml  mkdocs.yml  openapi.yaml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: licensetool_ci.yml  licensetool_ci_dev.yml  licensetool_cicd.yml  syntaxtests.yml
documentation/: index.md  merge_all_file2one.ps1  merged.md
documentation/Abschluss/: 51_reaced_goals.md  52_reflections_and_experiences.md  index.md
documentation/Einleitung/: 21_ausgangslage.md  22_ziele.md  23_zeitplan.md  24_risiken.md  25_projektmanagement-methode.md  26_SEUSAG.md
documentation/Haupteil/: 31_define.md  32_measure.md  33_analyze.md  34_improve.md  35_control.md  index.md
documentation/Quellverzeichnis/: index.md
documentation/Sprints/: index.md  sprint1_17-11-2025.md  sprint2_15-12-2025.md  sprint3_23-01-2026.md
infra/k8s/archive/: create-secret-bsp.ps1  lb.yaml
infra/k8s/clusters/dev/: kustomization.yaml
infra/k8s/dev/: create-cluster.ps1  create-secret.ps1  ingress.yaml  install-argocd.ps1  lb.yaml  licensetool-dev.yaml
infra/k8s/dev/archive/: ingress.yaml  licensetool-dev.yaml
infra/k8s/dev/base/: licensetool-dev.yaml
infra/k8s/dev/overlays/: kustomization.yaml
infra/k8s/dev/ps/: create-cluster.ps1  install-argocd.ps1
infra/k8s/dev/yaml-files/: deploy-mount-secrets.yaml  deploy_argocd.yaml  ingress-nginx.yaml  licensetool-dev.yaml
infra/k8s/scripts/dev/: create-cluster.ps1  create-sealed-secrets-bsp.ps1  (+2 more)
ressources/: Link.md
ressources/docs/: .$seusag.drawio.bkp  .$zielarchitektur.drawio.bkp  Risikomatrix.pptx  infrastructure_evaluation.md  seusag.drawio  zielarchitektur.drawio
ressources/k8s/: deploy.yaml  service.yaml
ressources/licensetool/: app.db  compose.test.yaml  compose.yaml  config.py  dockerfile  dockerfile.test  pyproject.toml  requirements.txt
ressources/licensetool/app/: __init__.py
ressources/licensetool/app/auth/: __init__.py  routes.py  utils.py
ressources/licensetool/app/licenses/: __init__.py  routes.py
ressources/licensetool/app/main/: __init__.py  routes.py
ressources/licensetool/app/models/: license.py
ressources/licensetool/app/modules/: logging_config.py  mggraph.py  sku_mapping.py
ressources/licensetool/app/monitoring/: __init__.py  routes.py
ressources/licensetool/app/static/: frontend.css  mainpage.css  monitoring.css  statusall.css  tenant.css
ressources/licensetool/app/templates/: frontend.html  mainpage.html  monitoring.html  statusall.html  tenant.html
ressources/licensetool/config/: sku_mappings.json
ressources/licensetool/notes/: logs_login-logout_and_request.txt
ressources/licensetool/test/: __init__.py  conftest.py  create_test_data.py  test_auth.py  test_license.py  test_main.py  test_mggraph.py  test_monitoring.py
ressources/notizen/: Backup_improvesem4.md  Kubectlcomands.md  minikubecomands.md  notizen.md
(+28 files in other folders)
