############################
# Black – Code Formatter
############################

[tool.black]
line-length = 410
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | logs
)/
'''

############################
# isort – Import Sortierung
############################

[tool.isort]
profile = "black"
line_length = 320
known_first_party = ["app", "config"]
src_paths = ["app"]
skip = [
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
  "logs",
]

############################
# Ruff – Linter
############################

[tool.ruff]
line-length = 320
target-version = "py310"
# Dein eigentlicher Code liegt unter app/
src = ["app"]
exclude = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
  "logs",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E203", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[tool.ruff.lint.per-file-ignores]
# Blueprints: Imports für Seiteneffekte sind gewollt
"app/auth/__init__.py" = ["E402", "F401"]
"app/licenses/__init__.py" = ["E402", "F401"]

############################
# pytest
############################

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
  "test",
]

############################
# mypy – Typprüfung
############################

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
mypy_path = ["app"]

############################
# Bandit – Security-Scanner
############################

[tool.bandit]
exclude = [
  "test",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
  "logs",
]
skips = []

############################
# setuptools – Packaging
############################

[project]
name = "Licensemonitor"                # pip-normalisiert: licensemonitor
version = "1.0.0"
description = "Packet für Licensetool"
authors = [{ name = "Migi", email = "miguel.schneider@edu.tbz.ch" }]
requires-python = ">=3.10"

# Runtime-Dependencies (aus deiner requirements.txt nur die für Betrieb)
dependencies = [
  "Flask==3.1.0",
  "apiflask==2.3.2",
  "mysql-connector-python==9.2.0",
  "flask-sqlalchemy==3.1.1",
  "requests==2.31.0",
  "msal==1.32.3",
  "python-dotenv==1.1.0"
]

[project.urls]
Homepage = "https://dev.azure.com/radballmigi/HF-ITCNE24-SemArbeit4-LicenseMonitor-K8s"
Repository = "https://dev.azure.com/radballmigi/HF-ITCNE24-SemArbeit4-LicenseMonitor-K8s/_artifacts/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

# Statische Assets ins Wheel aufnehmen
[tool.setuptools.package-data]
ecommerce_webshop = [
  "templates/**/*",
  "static/**/*",
  "app.db"
]